# rag-chunking

./: .gitignore  README.md  pyproject.toml
data/sample/: questions.jsonl
data/sample/documents/: october_crisis.txt  rag_intro.txt
docs/: benchmarking.md
results/: report.md  results.csv  results.json
results/article_package/: README.md  article_findings.md  diagnostics.csv  figure_captions.md  method_ranking.csv  report.md  results.csv  results.json
results/article_package/plots/: index.md
scripts/: download_datasets.py  extract_tarball.py  normalize_benchmark.py  start_half_run.sh
src/rag_chunking/: __init__.py  __main__.py  cache.py  chunkers.py  cli.py  embeddings.py  evaluation.py  llm.py  loaders.py  models.py  pipeline.py  reporting.py  retrieval.py  significance.py  text_utils.py
src/rag_chunking_benchmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cache.py  test_chunkers.py  test_cli.py  test_loaders.py  test_pipeline.py  test_retrieval_and_evaluation.py  test_semantic_llm_significance.py
