[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-chunking-benchmark"
version = "0.1.0"
description = "Benchmark chunking strategies for retrieval-augmented generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
semantic = ["sentence-transformers>=3.0.0"]
openai = ["openai>=1.0.0"]

[project.scripts]
rag-benchmark = "rag_chunking.cli:main"

[tool.unittest]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
